--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,3 +1,13 @@
+{% if request.user.is_authenticated %}
+    <p>{{ request.user }}</p>
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit">logout</button>
+    </form>
+{% else %}
+    <a href="{% url "login" %}">login</a>
+{% endif %}
+
 <h1>My To Do List</h1>
 <a href="{% url 'task-create'  %}">Add Task</a>
 
