--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,9 +1,17 @@
-<h1>Login</h1>
+{% extends 'base/main.html' %}
 
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="login">
-</form>
+{% block content %}
+<div class="header-bar">
+    <h1>Login</h1>
+</div>
 
-<p>Don't have an account? <a href="{% url "register" %}">Register</a></p>
+<div class="card-body">
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input class="button" type="submit" value="login">
+    </form>
+    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+</div>
+
+{% endblock content %}
