--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,7 +1,15 @@
-<a href="{% url "tasks" %}">back</a>
+{% extends 'base/main.html' %}
 
-<form action="" method="post">
-    {% csrf_token %}
-    <p>Are you sure to delete "{{ task }}"?</p>
-    <input type="submit" value="Delete">
-</form>
+{% block content %}
+<div class="header-bar"> 
+    <a href="{% url "tasks" %}">&#8592;back</a>
+</div>
+
+<div class="card-body">
+    <form action="" method="post">
+        {% csrf_token %}
+        <p>Are you sure to delete "{{ task }}"?</p>
+        <input class="button" type="submit" value="Delete">
+    </form>
+</div>
+{% endblock content %}
