--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -9,120 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-        <style>
-            body {
-                background-color: #FAFAFA;
-                font-family: 'Nunito', sans-serif;
-                padding-top: 50px;
-            }
-
-            h1, h2, h3, h4, h5, h6 {
-                font-family: 'Nunito', sans-serif;
-            }
-
-            a, p { 
-                color: #4b5156
-            }
-
-            .container {
-                max-width: 550px;
-                margin: auto;
-                background-color: #fff;
-                -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21); 
-                box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
-            }
-
-            .header-bar { 
-                display: flex; 
-                justify-content: space-between; 
-                color: #fff; 
-                padding: 10px; 
-                border-radius: 5px 5px 0 0; 
-                background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%);
-            }
-
-            .task-wrapper {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: 20px;
-                background-color: #fff;
-                border-top: 1px solid rgb(226, 226, 226);
-            }
-
-            .task-title {
-                display: flex;
-            }
-
-            .task-title a { 
-                text-decoration: none; 
-                color: #4b5156; 
-                margin-left: 10px;
-            }
-
-            .task-complete-icon { 
-                height: 20px; 
-                width: 20px; 
-                background-color: rgb(105, 192, 105); 
-                border-radius: 50%;
-            }
-            
-            .task-incomplete-icon {
-                height: 20px; 
-                width: 20px; 
-                background-color: rgb(218, 218, 218); 
-                border-radius: 50%;
-            }
-
-            .delete-link {
-                text-decoration: none; 
-                font-weight: 900; 
-                color: #cf4949; 
-                font-size: 22px; 
-                line-height: 0;
-            }
-
-            #search-add-wrapper { 
-                display: flex; 
-                justify-content: space-between; 
-                align-items: center; 
-                padding: 10px;
-            }
-            
-            #add-link {
-                color: #6feb79; 
-                text-decoration: none; 
-                font-size: 42px;
-                text-shadow: 1px 1px #eb6fe1 ;
-            }
-
-            input[type=text], input[type=password], textarea { 
-                border: 1px solid #EB796F; 
-                border-radius: 5px; 
-                padding: 10px; 
-                width: 90%;
-            }
-            
-            label { 
-                padding-top: 10px !important; 
-                display: block;
-            }
-            
-            .button {
-                border: 1px solid #EB796F; 
-                background-color: #FAFAFA; 
-                color: #EB796F;
-                padding: 10px;
-                font-size: 14px; 
-                border-radius: 5px; 
-                cursor: pointer; 
-                text-decoration: none;
-            }
-
-            .card-body {
-                padding: 20px;
-            }
-        </style>
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     </head>
     <body>
         <div class="container">
