--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -42,7 +42,7 @@
     </div>
     
     {% empty %} 
-    <h3>No items in list</h3> 
+    <h3 style="margin: 10px;">No tasks</h3> 
     {% endfor %}
 </div>
 
